# streaming-whisper-server

./: .gitignore  CustomServer.py  client.py  output.srt  pyproject.toml  readme.md  testAlgo.py
Client/loopback_mic/: Client.py  out.srt  utils.py
Client/simple_client/: Client.py
Client/warm_up/: client.py
Client/warm_up_client/: client.py
CustomWhisper/: WhisperClient.py  WhisperServer.py  __main__.py  client.py
CustomWhisper/denoise/: __init__.py  decorator.py  demucs.py  infrenceMec.py  model_handler.py  utils.py
CustomWhisper/whisper_live/: client.py  server.py
LLM/: readme
LongestPrefix/: __init__.py
Server/: Server.py  hotwords
Server/pretrained_models/SepformerSeparation-5ae212602267ca7b70d43980e0fde000/: decoder.ckpt  encoder.ckpt  hyperparams.yaml  masknet.ckpt
WhisperLive/: WhisperClient.py  WhisperServer.py  __init__.py  __main__.py
WhisperLive/denoise/: __init__.py  decorator.py  demucs.py  infrenceMec.py  model_handler.py
WhisperLive/denoise/Models/: __init__.py  base.py  deepfilternet_denoise.py  facebook_denoise.py  facebook_denoise_master64.py  speechbrain_denoise.py
WhisperLive/model_warm/: __init__.py  model_load_map.py
WhisperLive/whisper_live/: HypothesisBuffer.py  client.py  server.py  transcriber.py  transcriber_tensorrt.py  vad.py
example/SimpleExample/: Client.py  Server.py
example/SimpleExample/NoiseWeights/: readme.md
example/WithDenoise/: Client.py  Server.py
whisper_live/: transcriber.py
